:tada: initial commit

--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -17,8 +17,8 @@
   <body>
     <div id="container">
       <div id="profile">
-        <img src="./assets/avatar-light.png" alt="Foto de um homem" />
-        <p>@maikbrito</p>
+        <img src="./assets/avatar.png" alt="Foto da Mariana Souza." />
+        <p>@marisouza_x</p>
       </div>
 
       <div id="swich" onclick="toggleMode()">
@@ -28,33 +28,33 @@
 
       <ul>
         <li>
-          <a href="#" target="_blank">Link 1</a>
+          <a href="#" target="_blank">♥</a>
         </li>
         <li>
-          <a href="#" target="_blank">Link 2</a>
+          <a href="#" target="_blank">♥</a>
         </li>
         <li>
-          <a href="#" target="_blank">Link 3</a>
+          <a href="#" target="_blank">♥</a>
         </li>
         <li>
-          <a href="#" target="_blank">Link 4</a>
+          <a href="#" target="_blank">♥</a>
         </li>
       </ul>
       <div id="social-links">
-        <a href="https://www.youtube.com" target="_blank">
+        <a href="https://github.com/marianasouza01" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
-        <a href="#" target="_blank">
+        <a href="https://www.instagram.com/marisouza_x/" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
-        <a href="#" target="_blank">
-          <ion-icon name="logo-youtube"></ion-icon>
+        <a href="https://twitter.com/marisouza_x" target="_blank">
+          <ion-icon name="logo-twitter"></ion-icon>
         </a>
-        <a href="#" target="_blank">
+        <a href="https://www.linkedin.com/in/mariana-souza-392117254/" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
-      <footer>Feito com ♥ pela <a href="#">Rocketseat</a></footer>
+      <footer>Feito com ♥ pela Mari</footer>
     </div>
     <script
       type="module"
